--- a/src/index.css
+++ b/src/index.css
@@ -47,9 +47,15 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
-  border-color: #646cff;
+
+  background-color: #FF3030;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.63);
+  transition: background-color 0.3s;
+
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -66,4 +72,12 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+select {
+  color: #000;
+  border-radius: 10px;
+  padding: 5px;
+  margin: 0px 5px 5px 5px;
+  background-color: #FFF;
 }
