--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,10 @@ a:hover {
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
   place-items: center;
+  max-width: 100%;
   min-width: 320px;
   min-height: 100vh;
   background-color: #C9D1CF;
