Ajustado datatime-local

--- a/src/index.css
+++ b/src/index.css
@@ -81,8 +81,10 @@ select {
   border-radius: 25px;
   height: 40px;
   width: 100%;
-  margin: 0px 5px 20px 5px;
+  padding-left: 10px ;
   background-color: #FFF;
   border: 1px solid #000;
   appearance: none;
+  font-size: 16px;
+
 }
